Fix the fix for the button on iOS

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -533,6 +533,12 @@
         margin: 0;
     }
 
+    input {
+        -webkit-appearance: none;
+        -webkit-border-radius: 0;
+        border-radius: 0;
+    }
+
     input[type="email"] {
         background-color: lighten($background-color, 5%);
         font-family: $base-font-family;
@@ -543,9 +549,6 @@
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
         width:         calc(100% - (#{$spacing-unit} / 2));
         border: none;
-        -webkit-appearance: none;
-        -webkit-border-radius: 0;
-        border-radius: 0;
     }
     
 }
